<resources>
    <string name="app_name">StoryApp</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_maps">Maps</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="message_welcome_page">Want to share stories about Android, iOS, Machine Learning, Cloud, Front-End, Back-End, and other IT fields? Just do it at Dicoding!</string>
    <string name="title_welcome_page">Welcome to Dicoding!</string>
    <string name="title_signup_page">Please complete your data below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Please enter your data</string>
    <string name="title_login_page">Are you ready to upgrade your skills?</string>
    <string name="name">Name</string>
    <string name="message_main_page">Welcome to Dicoding Story. Happy learning!</string>
    <string name="greeting">Hello, %1$s,</string>
    <string name="logout">Logout</string>
    <string name="image_description">Image description in the story</string>
    <string name="error_et_email_invalid">Please enter a valid email</string>
    <string name="error_pw_less_than_8">Password must be at least 8 characters</string>
    <string name="error_pw_empty">Password cannot be empty</string>
    <string name="camera">Camera</string>
    <string name="camera_open_failure">Failed to open the camera.</string>
    <string name="camera_take_failure">Failed to take the picture.</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="empty_image_warning">Empty image warning</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="yeah">Yeah!</string>
    <string name="login_successful">You have successfully logged in. Excited to start learning?</string>
    <string name="next">Next</string>
    <string name="register_successful">Registration successful, please log in!</string>
    <string name="email_welcome">An account with %1$s is ready. Let\'s log in and start coding.</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="retry">Try again</string>
    <string name="post_location">Share Current Location</string>
    <string name="location_not_found">Location is not found. Try Again</string>
</resources>